<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hello_world</name>
  <version>2.0.0</version>
  <description>C++ hello_world demo nodes.</description>
  <maintainer email="reflect018@yahoo.co.jp">kaito yamazaki</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>hello_world_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>hello_world_msgs</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>